# MyEngine

./: .gitignore  CMakeLists.txt  README.md  compile.bat
include/: first_app.hpp  keyboard_movement.hpp  lve_camera.hpp  lve_device.hpp  lve_frame_info.hpp  lve_game_object.hpp  lve_material.hpp  lve_model.hpp  lve_pipeline.hpp  lve_renderer.hpp  lve_swap_chain.hpp  lve_texture.hpp  lve_utils.hpp  lve_window.hpp  rainbow_system.hpp  simple_render_system.hpp
include/systems/: point_light_system.hpp  simple_render_system.hpp  skybox_system.hpp
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  skybox.frag  skybox.vert
src/: first_app.cpp  keyboard_movement.cpp  lve_buffer.cpp  lve_camera.cpp  lve_descriptors.cpp  lve_device.cpp  lve_game_object.cpp  lve_model.cpp  lve_pipeline.cpp  lve_renderer.cpp  lve_swap_chain.cpp  lve_texture.cpp  lve_window.cpp  main.cpp  simple_render_system.cpp
src/systems/: point_light_system.cpp  simple_render_system.cpp  skybox_system.cpp
